added all routes

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,25 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #eeeeee;
+}
