--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,18 @@
   color: #61dafb;
 }
 
+/* This was taken from https://jrl.ninja/etc/1/ */
+.main {
+  max-width: 38rem;
+  padding: 2rem;
+  margin: auto;
+}
+
+table.center {
+  margin-left: auto; 
+  margin-right: auto;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,6 +48,13 @@
   color: red;
 }
 
+.cards-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 .navbar {
   list-style-type: none;
   margin: 0;
@@ -43,17 +62,17 @@
   overflow: hidden;
 }
 
-li {
+.navbar li {
   float: left;
 }
 
-li a {
+.navbar li a {
   display: block;
   text-align: center;
   padding: 16px;
   text-decoration: none;
 }
 
-li a:hover {
+.navbar li a:hover {
   background-color: #eeeeee;
 }
